--- a/sass/modules/_eye-care-skill-area.scss
+++ b/sass/modules/_eye-care-skill-area.scss
@@ -110,7 +110,7 @@
         .content-wrapper{
             .elementor-widget-wrap{
                 @include rmaxwd(991){
-                    margin-left: 0 !important;
+                    margin-left: 18px !important;
                 }
             }
         }
