--- a/sass/modules/_meanmenu.scss
+++ b/sass/modules/_meanmenu.scss
@@ -39,7 +39,7 @@
   font-weight: 700;
   display: block;
   float: left;
-  padding: 10px 30px;
+  padding: 10px 30px 10px 0;
   margin: 0;
   text-align: left;
   color: $black;
@@ -51,6 +51,9 @@
   }
 }
 
+.mean-container .mean-nav ul li li a {
+  padding: 10px 10%;
+}
 .mean-container .mean-nav ul li a.mean-expand {
   line-height: 30px;
   color: $black;
